--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,28 +80,113 @@
 }
 
 html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+/*body {*/
+/*  max-width: 100vw;*/
+/*  overflow-x: hidden;*/
+/*}*/
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    margin:0;
+    background: #192125;
+    /*background-image: url("public/bg-2.svg");*/
+    background-size: cover ;
+  /*color: rgb(var(--foreground-rgb));*/
+  /*background: linear-gradient(*/
+  /*    to bottom,*/
+  /*    transparent,*/
+  /*    rgb(var(--background-end-rgb))*/
+  /*  )*/
+  /*  rgb(var(--background-start-rgb));*/
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/*a {*/
+/*  color: inherit;*/
+/*  text-decoration: none;*/
+/*}*/
+
+/*@media (prefers-color-scheme: dark) {*/
+/*  html {*/
+/*    color-scheme: dark;*/
+/*  }*/
+/*}*/
+
+
+.body {
+    margin:0;
+    background: #192125;
+    /*background-image: url("public/bg-2.svg");*/
+    background-size: cover ;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+section {
+    padding: 16px;
+    display: block;
+    height: 441px;
+    overflow-y: scroll;
 }
+
+input{
+    width: 80%;
+    box-shadow: 0 3px 20px rgba(1,41,112,.12);
+    font-size: 14px;
+    border-radius: 24px;
+    padding: 15px 5% 15px 5%;
+    border: 0px;
+    float: left;
+}
+
+input[type="submit"]{
+    background:#00FF68;
+    color: black;
+    font-size: 18px;
+    height: 46px;
+    border-radius:50px;
+    border: 0px;
+    display: block;
+    width: 65px;
+    padding: 0px;
+    margin-left: 8px;
+}
+::-webkit-scrollbar {
+    background: none;
+    width: 10px;
+    border: 2px #192125;
+}
+::-webkit-scrollbar-thumb {
+    background: #343434;
+    border-radius: 10px;
+}
+.text-chat{
+    position: fixed;
+    bottom: 10px;
+    width: 95%;
+    padding-left: 3%;
+}
+p{
+    color: white;
+    font-size: 1em;
+    font-family: sans-serif;
+    background: #343434;
+    border-radius: 8px;
+    padding: 14px;
+    width: 90%;
+    margin: 16px 0;
+}
+.chat-bot{
+    float: left;
+}
+.chat-user{
+    float: right;
+}
+.avatar{
+    /*background-image: url("public/avatar.png"); */
+    background-size: cover;
+    display: block;
+    width: 177px;
+    height: 280px;
+    margin: auto;
+    margin-top: 130px;
+
+}
+
+
